[package]
name = "token_distributor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.14.0"
cw2 = "0.14.0"
cw20 = "0.14.0"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0"
